Add kyc status functionallity to UserInfo

--- a/IPSX/Storyboard/Base.lproj/Main.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Main.storyboard
@@ -1262,6 +1262,7 @@
                         <outlet property="enroledTestingImageView" destination="kuQ-ec-fql" id="pna-Vb-UB1"/>
                         <outlet property="headerHeightConstraint" destination="Fhh-FM-aIX" id="vxr-hv-SHV"/>
                         <outlet property="hidableDownView" destination="jpt-Ua-Mrz" id="gbO-ko-GDi"/>
+                        <outlet property="kycStatusLabel" destination="YqW-LY-nCJ" id="UKJ-0e-LCq"/>
                         <outlet property="loadingView" destination="smJ-7h-ibg" id="go5-Ob-RnE"/>
                         <outlet property="tableView" destination="vDC-kx-BOD" id="Rkp-Co-ef7"/>
                         <outlet property="titleTopConstraint" destination="WLr-En-EOf" id="b2x-8V-qHq"/>
