--- a/IPSX/Flows/Profile/Storyboard/Base.lproj/Profile.storyboard
+++ b/IPSX/Flows/Profile/Storyboard/Base.lproj/Profile.storyboard
@@ -320,6 +320,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="MOe-bb-j0w"/>
                     <connections>
+                        <outlet property="changePasswordHolderView" destination="3E1-3i-z73" id="pQX-3x-01P"/>
                         <outlet property="emailTextField" destination="0Ww-Hu-VEN" id="8Zh-eE-Unl"/>
                         <outlet property="firstNameTextField" destination="gAm-WK-x0E" id="Puk-iJ-T7f"/>
                         <outlet property="keyIconImageView" destination="XmE-yz-7Zq" id="rDJ-57-ssX"/>
