Bug #II-153 - If cnahge password fails, user will be redirected to landing page

--- a/IPSX/Flows/Profile/Storyboard/Base.lproj/Profile.storyboard
+++ b/IPSX/Flows/Profile/Storyboard/Base.lproj/Profile.storyboard
@@ -340,10 +340,10 @@
             </objects>
             <point key="canvasLocation" x="6336.8000000000002" y="-154.27286356821591"/>
         </scene>
-        <!--EmailLoginScreenID-->
+        <!--Landing-->
         <scene sceneID="rsL-1Y-KeO">
             <objects>
-                <viewControllerPlaceholder storyboardName="Login" referencedIdentifier="EmailLoginScreenID" id="AWN-li-dF4" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardName="Landing" id="AWN-li-dF4" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="H5M-v3-3iy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="7734" y="-155"/>
