--- a/IPSX/Flows/EnrolTesting/Storyboard/Base.lproj/EnrolTesting.storyboard
+++ b/IPSX/Flows/EnrolTesting/Storyboard/Base.lproj/EnrolTesting.storyboard
@@ -706,6 +706,6 @@
         <image name="walletAccepted" width="32" height="32"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Wfr-eR-y9J"/>
+        <segue reference="noa-fJ-tO5"/>
     </inferredMetricsTieBreakers>
 </document>
